--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,51 +1,43 @@
+# pre-commit configuration file
+#
+# WARNING:
+# We use pre-commit exclusively for checking/linting purpose and
+# not to format files. If you want to format your files
+# run `make format`.
+#
+# TODO: add checks: mypy, safety, etc.
+
+exclude: |
+    (?x)^(
+      server/alembic/versions/.*py|
+      client/src/.eslintrc.json
+    )$
 repos:
--   repo: git@github.com:pre-commit/pre-commit-hooks
-    rev: v3.1.0
-    hooks:
-    - id: debug-statements
-    - id: trailing-whitespace
-    - id: check-merge-conflict
-    - id: check-executables-have-shebangs
-    - id: check-ast
-    - id: check-byte-order-marker
-    - id: check-json
-    - id: check-symlinks
-    - id: check-vcs-permalinks
-    - id: check-xml
-    - id: check-yaml
-    - id: detect-private-key
-    - id: forbid-new-submodules
-    - id: no-commit-to-branch
-      args: ['-b master']
-
--   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.3
-    hooks:
-    - id: flake8
-      args: ['--exclude=docs/*', '--ignore=E501']
-
--   repo: https://github.com/timothycrosley/isort
-    rev: 5.2.0
-    hooks:
-    - id: isort
-
--   repo: local
-    hooks:
-
-    - id: check-datetime-now
-      name: check_datetime_now
-      description: Prefer datetime.utcnow()
-      language: pygrep
-      entry: 'datetime\.now\(\)'
-      types: [python]
-
--   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.5.1
-    hooks:
-    - id: python-check-mock-methods
-
--   repo: git@github.com:buteco/hulks.git
-    rev: 0.4.0
-    hooks:
-    - id: check-logger
-    - id: check-mutable-defaults
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: "v4.4.0"
+      hooks:
+          - id: check-yaml
+          - id: end-of-file-fixer
+            files: server/.*py
+          - id: trailing-whitespace
+            files: server/.*py
+          - id: check-ast
+          - id: check-json
+          - id: check-merge-conflict
+          - id: debug-statements
+    - repo: https://github.com/psf/black
+      rev: "23.7.0"
+      hooks:
+          - id: black
+            args: ["-S"]
+    - repo: https://github.com/charliermarsh/ruff-pre-commit
+      rev: "v0.0.280"
+      hooks:
+          - id: ruff
+            args: ["--fix"]
+    - repo: https://github.com/python-poetry/poetry
+      rev: "1.4.2"
+      hooks:
+          - id: poetry-check
+          - id: poetry-lock
+            args: ["--check"]
