Adjust linter & format

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,8 @@ target-version = ["py310", "py311"]
 
 [tool.ruff]
 line-length = 100
-target-version = "py311"
+target-version = "py310"
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
-extend-exclude = ["alembic/versions"]
 select = [
     # enabled (basic style and conventions)
     "E", # ruff-builtin - python codestyle (some rules disabled)
@@ -61,10 +60,7 @@ select = [
     "ASYNC", # flake8-async - A flake8 plugin that checks for bad async / asyncio practices.
     "YTT", # flake8-2020 - fix Python's version comparisons
     "T10", # flake8-debugger - check for debugger invocations
-    "UP007", # pyupgrade - non-pep604-annotation
-    "UP019", # pyupgrade - typing.Text is deprecated, use str
-    "UP037", # pyupgrade - remove quotes from type annotation
-    "UP038", # pyupgrade - unnecessary parentheses after class definition
+    "UP", # pyupgrade - update python code style to newer versions
 
     # to-be enabled
     # "A", # flake8-builtins - warn about built-in name shadowing
@@ -90,7 +86,6 @@ select = [
     # "T20", # flake8-print - check for print()'s in the code
     # "TID", # flake8-tidy-imports - improve import commands
     # "TRY", # tryceratops - force good practices on exception handling
-    # "UP", # pyupgrade - update python code style to newer versions
 
     # disabled
     # "C", # ???
