--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
         python -m pip install -U pipx
         pipx install poetry
         poetry install
-        pre-commit install
+        poetry run pre-commit install
     - name: Lint with black & ruff
       run: |
         make format
